--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 #header{
   width: 100%;
   height: 100vh;
-  background-image: url(image/t.jpg);
+  background-image: url(./image/t.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -314,7 +314,7 @@ nav .fa-solid{
 
 @media only screen and (max-width: 600px){
   #header{
-    background-image: url(image/t-p.jpg);
+    background-image: url(./image/t-p.jpg);
   }
   .header-text{
     margin-top: 100%;
